--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
 
 html {
   font-size: 62.5%;
+  font-family: 'Epilogue', sans-serif;
 }
 
 main {
@@ -33,6 +34,7 @@ main {
   height: 80px;
 }
 
+/* styles menu mobile (start) */
 .header__nav {
   position: absolute;
   top: 0;
@@ -51,12 +53,14 @@ main {
   width: 26px;
   height: 80px;
   align-self: flex-end;
+  cursor: pointer;
 }
 
 .header__nav--ul {
   list-style: none;
   padding-left: 15px;
   font-size: 1.8rem;
+  font-weight: 500;
   color: var(--medium-gray);
 }
 
@@ -64,10 +68,62 @@ main {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .header__nav--ul li span {
   margin-right: 20px;
 }
 
-  /* header section (end) */
+.header__log-register {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  padding-left: 15px;
+}
+
+.header__log-register > button {
+  width: 100%;
+  height: 40px;
+  font-size: 1.8rem;
+  font-family: 'Epilogue', sans-serif;
+  color: var(--medium-gray);
+}
+
+.login {
+  border: none;
+  background-color: transparent;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.register {
+  border: 2px solid var(--medium-gray);
+  border-radius: 10px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__menu {
+  cursor: pointer;
+}
+/* styles menu mobile (end) */
+
+/* Features list styles (start) */
+.features-list, .company-list {
+  padding-left: 30px;
+}
+
+.features-list li img {
+  margin-right: 15px;
+}
+/* Features list styles (end) */
+
+/* header section (end) */
+
+/* Style inactive (start) */
+.inactive {
+  display: none;
+}
+/* Style inactive (end) */
