--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,24 @@ html {
 }
 
 main {
+  position: relative;
   width: 100%;
   max-width: 1440px;
   min-width: 375px;
   height: 100vh;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.shadow {
+  width: 96%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 /* header section (start) */
@@ -44,6 +56,7 @@ main {
   width: 60%;
   height: 100vh;
   background-color: white;
+  z-index: 2;
 }
 
 .header__iconClose {
@@ -122,8 +135,113 @@ main {
 
 /* header section (end) */
 
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Hero section (start) */
+.hero, .hero__img, .hero__img img {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+}
+/* Hero section (end) */
+
+/* Info Container (start) */
+.infoSection {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+}
+
+.infoSection__container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.infoSection__container--title {
+  font-size: 3.6rem;
+  margin-bottom: 20px;
+}
+
+.infoSection__container--phrase {
+  font-size: 1.8rem;
+  color: var(--medium-gray);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.infoSection__container--button {
+  width: 150px;
+  height: 40px;
+  font-family: 'Epilogue', sans-serif;
+  font-size: 1.8rem;
+  background-color: var(--almost-black);
+  color: var(--almost-white);
+  border: none;
+  border-radius: 10px;
+}
+/* Info Container (end) */
+
+/* Logos section (start) */
+.logosSection {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  margin-top: 50px;
+}
+
+.logosSection a img {
+  width: 50px;
+}
+/* Logos section (end) */
+
 /* Style inactive (start) */
 .inactive {
   display: none;
 }
 /* Style inactive (end) */
+
+/* --------------------------------------- */
+/* media querys */
+@media (min-width: 809px) {
+  .header__menu {
+    display: none;
+  }
+
+  .header__iconClose {
+    display: none;
+  }
+
+  .header__nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 80%;
+    height: 80px;
+    top: 0;
+    background-color: transparent;
+  }
+
+  .header__nav--ul {
+    display: flex;
+    width: 500px;
+  }
+
+  .header__nav--ul li {
+    margin-bottom: 0;
+  }
+
+  .header__log-register {
+    flex-direction: row;
+  }
+
+  .login {
+    margin-bottom: 0;
+  }
+}
