--- a/src/styles.css
+++ b/src/styles.css
@@ -221,8 +221,9 @@ main {
   .header__nav {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 80px;
     top: 0;
     background-color: transparent;
@@ -230,18 +231,103 @@ main {
 
   .header__nav--ul {
     display: flex;
+    justify-content: space-between;
     width: 500px;
   }
 
   .header__nav--ul li {
     margin-bottom: 0;
+    margin-right: 20px;
+  }
+
+  .header__nav--ul li span {
+    margin-right: 5px;
   }
 
   .header__log-register {
     flex-direction: row;
+    width: 400px;
   }
 
   .login {
     margin-bottom: 0;
   }
+
+  .login:hover {
+    color: var(--almost-black);
+  }
+
+  .register:hover {
+    border: 2px solid var(--almost-black);
+    color: var(--almost-black);
+  }
+
+  .features-list,
+  .company-list {
+    padding-left: 30px;
+    position: absolute;
+    top: 80px;
+    height: 200px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px 0 20px 15px;
+    box-shadow: 0px 0px 27px #e0e0e0;
+  }
+  
+  .features-list {
+    width: 150px;
+    left: -33px;
+  }
+
+  .features-list li {
+    margin-bottom: 20px;
+  }
+
+  .company-list {
+    width: 120px;
+    height: 150px;
+    left: 142px;
+  }
+
+  .company-list li {
+    margin-bottom: 20px;
+  }
+
+  .container {
+    width: 75%;
+    height: 100vh;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .infoSection {
+    margin-top: 0;
+  }
+
+  .infoSection__container {
+    align-items: flex-start;
+  }
+
+  .infoSection__container--title {
+    font-size: 7.6rem;
+    margin-bottom: 50px;
+  }
+
+  .infoSection__container--phrase {
+    width: 450px;
+    text-align: initial;
+    line-height: 30px;
+    align-self: flex-start;
+    margin-bottom: 50px;
+  }
+
+  .hero,
+  .hero__img,
+  .hero__img img {
+    width: 100%;
+    height: 500px;
+  }
+
 }
