--- a/src/styles.css
+++ b/src/styles.css
@@ -255,11 +255,13 @@ main {
 
   .login:hover {
     color: var(--almost-black);
+    font-weight: 700;
   }
 
   .register:hover {
     border: 2px solid var(--almost-black);
     color: var(--almost-black);
+    font-weight: 700;
   }
 
   .features-list,
@@ -295,7 +297,7 @@ main {
 
   .container {
     width: 75%;
-    height: 100vh;
+    height: 585px;
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
@@ -328,6 +330,14 @@ main {
   .hero__img img {
     width: 100%;
     height: 500px;
+  }
+
+  .infoSection__container--button:hover {
+    border: 1px solid var(--almost-black);
+    background-color: var(--almost-white);
+    color: var(--almost-black);
+    cursor: pointer;
+    font-weight: 700;
   }
 
 }
